// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptVersion rendering tests PromptVersion - isCurrent false - rendered test 1`] = `
<div>
  <div
    data-testid="prompt-version"
  >
    <div
      class="bg-slate-50 rounded-lg border border-slate-200 overflow-hidden"
    >
      <button
        class="gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground h-9 has-[>svg]:px-3 w-full p-4 flex justify-between items-center hover:bg-slate-100 transition-colors"
        data-slot="button"
        data-testid="expand-btn"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-4 h-4 text-slate-600"
            data-testid="chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <span
            class="font-medium text-slate-900"
          >
            Version 
            1
          </span>
        </div>
        <span
          class="text-sm text-slate-600"
        >
          27. Sept. 2025, 02:00 AM
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`PromptVersion rendering tests PromptVersion - isCurrent true - rendered test 1`] = `
<div>
  <div
    data-testid="prompt-version"
  >
    <div
      class="bg-slate-50 rounded-lg border border-slate-200 overflow-hidden"
    >
      <button
        class="gap-2 whitespace-nowrap rounded-md text-sm font-medium disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground h-9 has-[>svg]:px-3 w-full p-4 flex justify-between items-center hover:bg-slate-100 transition-colors"
        data-slot="button"
        data-testid="expand-btn"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-right w-4 h-4 text-slate-600"
            data-testid="chevron-right"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m9 18 6-6-6-6"
            />
          </svg>
          <span
            class="font-medium text-slate-900"
          >
            Version 
            1
          </span>
          <span
            class="px-2 py-1 bg-green-100 text-green-700 rounded text-xs border border-green-200"
          >
            Current
          </span>
        </div>
        <span
          class="text-sm text-slate-600"
        >
          27. Sept. 2025, 02:00 AM
        </span>
      </button>
    </div>
  </div>
</div>
`;
